--- a/modules/back-end/node-js/express-js/weather-app/package.json
+++ b/modules/back-end/node-js/express-js/weather-app/package.json
@@ -9,6 +9,7 @@
   "author": "Ashutosh Ojha",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   }
 }
